# rust-mtzip

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
src/zip/: crc32.rs  data.rs  extra_field.rs  file.rs  job.rs  level.rs  mod.rs
src/zip_archive_parts/: data.rs  file.rs  job.rs  mod.rs
