[package]
name = "async-mtzip"
version = "0.0.2"
edition = "2021"
description = "A library for making zip archives with multithreaded async compression"
license = "MIT"
repository = "https://github.com/dounine/rust-mtzip"
categories = ["compression", "concurrency"]
documentation = "https://docs.rs/mtzip"
authors = ["102535481@qq.com"]

[workspace]
members = [".", "example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["rayon"]

[dependencies]
cfg-if = "1.0.0"
flate2 = { version = "1.0", default-features = false }
rayon = { version = "1.10.0", optional = true }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
async-compression = { version = "0.4.10", features = ["tokio", "deflate"] }

[features]
default = ["rust_backend"]
rust_backend = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
rayon = ["dep:rayon"]
