[package]
name = "async-mtzip"
version = "0.0.3"
edition = "2021"
description = "A library for making zip archives with multithreaded async compression"
license = "MIT"
repository = "https://github.com/dounine/rust-mtzip"
categories = ["compression", "concurrency"]
documentation = "https://docs.rs/async-mtzip"
authors = ["102535481@qq.com"]

[workspace]
members = [".", "example"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.37.0"}
async-compression = { version = "0.4.10", features = ["tokio", "deflate"] }
crc32fast = "1.2.1"
tempfile = "3.10.1"